--- a/news.html
+++ b/news.html
@@ -142,3 +142,63 @@
   <script src="assets/js/ad-manager.js"></script>
 </body>
 </html>
+ <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <a href="#" class="logo-text">Kora Live</a>
+            </div>
+               
+        <div class="footer-links">
+            <a href="news.html"><i class="fas fa-newspaper"></i> Football News</a>
+            <a href="index.html"><i class="fas fa-home"></i> Matches</a>
+        </div>
+    </div>
+
+    <!-- الجزء الجديد: قوائم الروابط (تم تحديث الروابط لتكون داخلية) -->
+    <div class="footer-extra-links">
+        <div class="footer-widget">
+            <h3 class="widget-title">koora live</h3>
+            <ul class="widget-menu">
+                <li><a href="/yalla-shoot.html">يلا شوت – yalla shoot</a></li>
+                <li><a href="/kooracity.html">كورة سيتي | kooracity</a></li>
+                <li><a href="/yalla-shoot-hd.html">يلا شوت اتش دي – YallaShootHD</a></li>
+            </ul>
+        </div>
+        <div class="footer-widget">
+            <h3 class="widget-title">kora live</h3>
+            <ul class="widget-menu">
+                <li><a href="/yalla-live.html">يلا لايف – yalla live</a></li>
+                <li><a href="/koora-extra.html">كورة اكسترا – koora extra</a></li>
+                <li><a href="/yalla-shoot-tv.html">يلا شوت تيفي – Yalla Shoot TV</a></li>
+            </ul>
+        </div>
+        <div class="footer-widget">
+            <h3 class="widget-title">كورة لايف</h3>
+            <ul class="widget-menu">
+                <li><a href="/sir-tv.html">سير تيفي – Sir TV</a></li>
+                <li><a href="/kora-online.html">كورة أون لاين – kora online</a></li>
+                <li><a href="/yacine-tv.html">ياسين تيفي – Yacine TV</a></li>
+            </ul>
+        </div>
+        <div class="footer-widget">
+            <h3 class="widget-title">kooralive</h3>
+            <ul class="widget-menu">
+                <li><a href="/livehd7.html">livehd7 – الاسطورة لبث المباريات</a></li>
+                <li><a href="/buzkora.html">بوز كورة – buzkora</a></li>
+                <li><a href="/syria-live.html">سوريا لايف | Syria Live</a></li>
+            </ul>
+        </div>
+    </div>
+        <div class="copyright">
+            <p>Copyright © <span id="current-year"></span> Koralive - All rights reserved</p>
+        </div>
+    </footer>
+    
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
+    <script src="assets/js/ad-manager.js"></script>
+    <script type="module" src="assets/js/matches.js"></script>
+
+</body>   
+</html>
