--- a/news.html
+++ b/news.html
@@ -124,12 +124,17 @@
         </section>
     </main>
 
-     <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <a href="#top-of-page" class="logo-text">Kora Live</a>
-    </div>
-  
+    <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <a href="#" class="logo-text">Kora Live</a>
+            </div>
+               
+        <div class="footer-links">
+            <a href="news.html"><i class="fas fa-newspaper"></i> Football News</a>
+            <a href="index.html"><i class="fas fa-home"></i> Matches</a>
+        </div>
+    </div>
 
     <!-- الجزء الجديد: قوائم الروابط (تم تحديث الروابط لتكون داخلية) -->
     <div class="footer-extra-links">
@@ -166,10 +171,6 @@
             </ul>
         </div>
     </div>
-        <div class="footer-links">
-      <a href="index.html"><i class="fas fa-home"></i>Matches</a>
-      <a href="news.html"><i class="fas fa-newspaper"></i>Football News</a>
-    </div>
         <div class="copyright">
             <p>Copyright © <span id="current-year"></span> Koralive - All rights reserved</p>
         </div>
