--- a/news.html
+++ b/news.html
@@ -180,7 +180,7 @@
         document.getElementById('current-year').textContent = new Date().getFullYear();
     </script>
     <script src="assets/js/ad-manager.js"></script>
-    <script type="module" src="assets/js/matches.js"></script>
+    <script type="module" src="assets/js/news.js"></script>
 
 </body>   
 </html>
