--- a/index.html
+++ b/index.html
@@ -68,7 +68,18 @@
 </script>
 </head>
 <body>
-    
+    <!-- شريط التواصل الاجتماعي العائم -->
+<div class="social-bar">
+    <a href="https://www.tiktok.com/YOUR_USERNAME" target="_blank" class="social-icon tiktok" aria-label="TikTok">
+        <i class="fab fa-tiktok"></i>
+    </a>
+    <a href="https://www.instagram.com/YOUR_USERNAME" target="_blank" class="social-icon instagram" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.youtube.com/YOUR_CHANNEL" target="_blank" class="social-icon youtube" aria-label="YouTube">
+        <i class="fab fa-youtube"></i>
+    </a>
+</div>
     <header class="header">
     
     <!-- 1. الشعار (على اليسار) -->
