Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 <body>
     <!-- شريط التواصل الاجتماعي العائم -->
 <div class="social-bar">
-    <a href="https://www.tiktok.com/YOUR_USERNAME" target="_blank" class="social-icon tiktok" aria-label="TikTok">
+    <a href="https://www.tiktok.com/@koralive.football" target="_blank" class="social-icon tiktok" aria-label="TikTok">
         <i class="fab fa-tiktok"></i>
     </a>
-    <a href="https://www.instagram.com/YOUR_USERNAME" target="_blank" class="social-icon instagram" aria-label="Instagram">
+    <a href="https://www.instagram.com/koralive.football" target="_blank" class="social-icon instagram" aria-label="Instagram">
         <i class="fab fa-instagram"></i>
     </a>
-    <a href="https://www.youtube.com/YOUR_CHANNEL" target="_blank" class="social-icon youtube" aria-label="YouTube">
+    <a href="https://www.youtube.com/@MaghribiTv-i5t" target="_blank" class="social-icon youtube" aria-label="YouTube">
         <i class="fab fa-youtube"></i>
     </a>
 </div>
