--- a/news.html
+++ b/news.html
@@ -79,6 +79,18 @@
             </ul>
         </nav>
     </header>
+       <!-- شريط التواصل الاجتماعي العائم -->
+<div class="social-bar">
+    <a href="https://www.tiktok.com/@koralive.football" target="_blank" class="social-icon tiktok" aria-label="TikTok">
+        <i class="fab fa-tiktok"></i>
+    </a>
+    <a href="https://www.instagram.com/koralive.football" target="_blank" class="social-icon instagram" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+    </a>
+    <a href="https://www.youtube.com/@MaghribiTv-i5t" target="_blank" class="social-icon youtube" aria-label="YouTube">
+        <i class="fab fa-youtube"></i>
+    </a>
+</div>
 
     <main class="news-main">
         <!-- مؤشر التحميل -->
