--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- ====================================================== -->
 
     <!-- 1. العنوان: قصير، واضح، ويحتوي على الكلمات المفتاحية الرئيسية -->
-    <title>كورة لايف | koora live - مباريات اليوم بث مباشر kora live</title>
+    <title>كورة لايف | kora live | مباريات اليوم بث مباشر koora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
     <meta name="description" content="موقع KoraLive (كورة لايف) يقدم لكم بث مباشر لأهم مباريات اليوم، مع تغطية حصرية لنتائج وجداول الدوريات العالمية والعربية مثل دوري أبطال أوروبا والدوري السعودي.">
@@ -24,7 +24,7 @@
     <!-- === وسوم Open Graph (للمشاركة على فيسبوك وواتساب) === -->
     <!-- ====================================================== -->
 
-    <meta property="og:title" content="كورة لايف | koora live - مباريات اليوم بث مباشر kora live"/>
+    <meta property="og:title" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live"/>
     <meta property="og:description" content="تغطية حصرية ومباشرة لأهم مباريات كرة القدم العالمية والعربية. انضم إلينا لمشاهدة فريقك المفضل."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://koralive.football/"/>
@@ -36,8 +36,8 @@
     <!-- ====================================================== -->
     
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="كورة لايف | koora live - مباريات اليوم بث مباشر kora live"/>
-    <meta name="twitter:description" content="تابع البث المباشر لأهم مباريات كرة القدم العالمية والعربية على KoraLive."/>
+    <meta name="twitter:title" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live"/>
+    <meta name="twitter:description" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live"/>
     <meta name="twitter:image" content="https://koralive.football/assets/images/logo.png"/>
 
     <!-- ====================================================== -->
