Update meta description for SEO optimization

--- a/kooracity.html
+++ b/kooracity.html
@@ -12,7 +12,7 @@
     <title>كورة لايف | koora live - مباريات اليوم بث مباشر kora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
-    <meta name="description" content="موقع KoraLive (كورة لايف) يقدم لكم بث مباشر لأهم مباريات اليوم، مع تغطية حصرية لنتائج وجداول الدوريات العالمية والعربية مثل دوري أبطال أوروبا والدوري السعودي.">
+    <meta name="description" content="كورة لايف | koora live - مباريات اليوم بث مباشر kora live">
 
     <!-- 3. الكلمات المفتاحية (اختياري، لكن لا يضر) -->
     <meta name="keywords" content="كورة لايف, بث مباشر, مباريات اليوم, koralive, koora live, دوري أبطال أوروبا, الدوري الإنجليزي, الدوري الإسباني, الدوري السعودي">
