Update title for better SEO keywords

--- a/kooracity.html
+++ b/kooracity.html
@@ -9,7 +9,7 @@
     <!-- ====================================================== -->
 
     <!-- 1. العنوان: قصير، واضح، ويحتوي على الكلمات المفتاحية الرئيسية -->
-    <title>كورة لايف | koora live - مباريات اليوم بث مباشر kora live</title>
+    <title>koora live | كورة لايف | مباريات اليوم بث مباشر جوال kora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
     <meta name="description" content="كورة لايف | koora live - مباريات اليوم بث مباشر kora live">
