Update title for SEO optimization

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- ====================================================== -->
 
     <!-- 1. العنوان: قصير، واضح، ويحتوي على الكلمات المفتاحية الرئيسية -->
-    <title>كورة لايف | kora live | مباريات اليوم بث مباشر koora live</title>
+    <title>koora live | كورة لايف | مباريات اليوم بث مباشر جوال kora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
     <meta name="description" content="موقع KoraLive (كورة لايف) يقدم لكم بث مباشر لأهم مباريات اليوم، مع تغطية حصرية لنتائج وجداول الدوريات العالمية والعربية مثل دوري أبطال أوروبا والدوري السعودي.">
