--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>koora live | كورة لايف | مباريات اليوم بث مباشر جوال kora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
-    <meta name="description" content="موقع KoraLive (كورة لايف) يقدم لكم بث مباشر لأهم مباريات اليوم، مع تغطية حصرية لنتائج وجداول الدوريات العالمية والعربية مثل دوري أبطال أوروبا والدوري السعودي.">
+    <meta name="description" content="كورة لايف الموقع الرسمي للبث المباشر لمباريات اليوم kora live hd من مختلف البطولات العالمية والعربية kora live new، koora live مع تغطية لحظية لأحداث المباريات kora live، وملخصات، وجدول محدث يوميًا للمباريات والقنوات الناقلة koralive.">
 
     <!-- 3. الكلمات المفتاحية (اختياري، لكن لا يضر) -->
-    <meta name="keywords" content="كورة لايف, بث مباشر, مباريات اليوم, koralive, koora live, دوري أبطال أوروبا, الدوري الإنجليزي, الدوري الإسباني, الدوري السعودي">
+    <meta name="keywords" content="كورة لايف, بث مباشر, مباريات اليوم, koralive, koora live, دوري أبطال أوروبا, الدوري الإنجليزي, الدوري الإسباني, الدوري السعودي, لايف كورة, BEIN KORA">
 
     <!-- 4. رابط النسخة الرسمية للموقع -->
     <link rel="canonical" href="https://koralive.football/" />
