--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>koora live | كورة لايف | مباريات اليوم بث مباشر جوال kora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
-    <meta name="description" content="كورة لايف الموقع الرسمي للبث المباشر لمباريات اليوم kora live hd من مختلف البطولات العالمية والعربية kora live new، koora live مع تغطية لحظية لأحداث المباريات kora live، وملخصات، وجدول محدث يوميًا للمباريات والقنوات الناقلة koralive.">
+    <meta name="description" content="كورة لايف (kora live) الموقع الرسمي للبث المباشر. شاهد مباريات اليوم HD، وتابع جدول المباريات، الملخصات، والقنوات الناقلة. تغطية شاملة!">
 
     <!-- 3. الكلمات المفتاحية (اختياري، لكن لا يضر) -->
     <meta name="keywords" content="كورة لايف, بث مباشر, مباريات اليوم, koralive, koora live, دوري أبطال أوروبا, الدوري الإنجليزي, الدوري الإسباني, الدوري السعودي, لايف كورة, BEIN KORA">
