--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <!-- ====================================================== -->
 
     <!-- 1. العنوان: قصير، واضح، ويحتوي على الكلمات المفتاحية الرئيسية -->
-    <title>koora live | كورة لايف | مباريات اليوم بث مباشر جوال kora live</title>
+    <title>كورة لايف | بث مباشر مباريات اليوم – koralive football</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
-    <meta name="description" content="كورة لايف (kora live) الموقع الرسمي للبث المباشر. شاهد مباريات اليوم HD، وتابع جدول المباريات، الملخصات، والقنوات الناقلة. تغطية شاملة!">
+    <meta name="description" content="شاهد جميع مباريات اليوم بث مباشر عبر كورة لايف، بجودة عالية وبدون تقطيع، مع تغطية الدوري الإنجليزي والإسباني.">
 
     <!-- 3. الكلمات المفتاحية (اختياري، لكن لا يضر) -->
-    <meta name="keywords" content="كورة لايف, بث مباشر, مباريات اليوم, koralive, koora live, دوري أبطال أوروبا, الدوري الإنجليزي, الدوري الإسباني, الدوري السعودي, لايف كورة, BEIN KORA">
+   <meta name="keywords" content="
+كورة لايف, koralive, koora live, بث مباشر مباريات اليوم,
+يلا شوت, yalla shoot, كورة سيتي, kooracity,
+يلا لايف, yalla live, كورة اكسترا, koora extra,
+ياسين تيفي, yacine tv, الدوري الإنجليزي, الدوري الإسباني,
+دوري أبطال أوروبا, الدوري السعودي, مباريات مباشرة, live football streaming">
+
 
     <!-- 4. رابط النسخة الرسمية للموقع -->
     <link rel="canonical" href="https://koralive.football/" />
@@ -24,8 +30,8 @@
     <!-- === وسوم Open Graph (للمشاركة على فيسبوك وواتساب) === -->
     <!-- ====================================================== -->
 
-    <meta property="og:title" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live"/>
-    <meta property="og:description" content="تغطية حصرية ومباشرة لأهم مباريات كرة القدم العالمية والعربية. انضم إلينا لمشاهدة فريقك المفضل."/>
+    <meta property="og:title" content="كورة لايف | بث مباشر مباريات اليوم – koralive football"/>
+    <meta property="og:description" content="شاهد جميع مباريات اليوم بث مباشر عبر كورة لايف، بجودة عالية وبدون تقطيع، مع تغطية الدوري الإنجليزي والإسباني."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://koralive.football/"/>
     <meta property="og:image" content="https://koralive.football/assets/images/logo.png"/>
@@ -36,8 +42,8 @@
     <!-- ====================================================== -->
     
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live"/>
-    <meta name="twitter:description" content="كورة لايف | kora live | مباريات اليوم بث مباشر koora live"/>
+    <meta name="twitter:title" content="كورة لايف | بث مباشر مباريات اليوم – koralive football"/>
+    <meta name="twitter:description" content="شاهد جميع مباريات اليوم بث مباشر عبر كورة لايف، بجودة عالية وبدون تقطيع، مع تغطية الدوري الإنجليزي والإسباني."/>
     <meta name="twitter:image" content="https://koralive.football/assets/images/logo.png"/>
 
     <!-- ====================================================== -->
