--- a/buzkora.html
+++ b/buzkora.html
@@ -95,7 +95,7 @@
     </div>
     
     <!-- 2. العنوان (في المنتصف) - تم تحديث النص هنا -->
-    <h1 class="header-title">كورة لايف | koora live - مباريات اليوم بث مباشر kora live</h1>
+    <h1 class="header-title">كورة لايف | بث مباشر مباريات اليوم – koralive football</h1>
     
     <!-- 3. قائمة التنقل (على اليمين) -->
     <nav class="nav">
