--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <meta name="twitter:title" content="كورة لايف | بث مباشر مباريات اليوم – koralive football"/>
     <meta name="twitter:description" content="شاهد جميع مباريات اليوم بث مباشر عبر كورة لايف، بجودة عالية وبدون تقطيع، مع تغطية الدوري الإنجليزي والإسباني."/>
     <meta name="twitter:image" content="https://koralive.football/assets/images/logo.png"/>
-
     <!-- ====================================================== -->
     <!-- === بقية الوسوم التقنية === -->
     <!-- ====================================================== -->
@@ -96,7 +95,7 @@
     </div>
     
     <!-- 2. العنوان (في المنتصف) - تم تحديث النص هنا -->
-    <h1 class="header-title">كورة لايف | koora live - مباريات اليوم بث مباشر kora live</h1>
+    <h1 class="header-title">كورة لايف | بث مباشر مباريات اليوم – koralive football</h1>
     
     <!-- 3. قائمة التنقل (على اليمين) -->
     <nav class="nav">
