--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- ====================================================== -->
 
     <!-- 1. العنوان: قصير، واضح، ويحتوي على الكلمات المفتاحية الرئيسية -->
-    <title>كورة لايف | بث مباشر مباريات اليوم – koralive football</title>
+    <title>كورة لايف | kora live | مباريات اليوم بث مباشر koora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
     <meta name="description" content="شاهد جميع مباريات اليوم بث مباشر عبر كورة لايف، بجودة عالية وبدون تقطيع، مع تغطية الدوري الإنجليزي والإسباني.">
@@ -30,7 +30,7 @@
     <!-- === وسوم Open Graph (للمشاركة على فيسبوك وواتساب) === -->
     <!-- ====================================================== -->
 
-    <meta property="og:title" content="كورة لايف | بث مباشر مباريات اليوم – koralive football"/>
+    <meta property="og:title" content=كورة لايف | kora live | مباريات اليوم بث مباشر koora live/>
     <meta property="og:description" content="شاهد جميع مباريات اليوم بث مباشر عبر كورة لايف، بجودة عالية وبدون تقطيع، مع تغطية الدوري الإنجليزي والإسباني."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://koralive.football/"/>
@@ -42,7 +42,7 @@
     <!-- ====================================================== -->
     
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content="كورة لايف | بث مباشر مباريات اليوم – koralive football"/>
+    <meta name="twitter:title" content=كورة لايف | kora live | مباريات اليوم بث مباشر koora live/>
     <meta name="twitter:description" content="شاهد جميع مباريات اليوم بث مباشر عبر كورة لايف، بجودة عالية وبدون تقطيع، مع تغطية الدوري الإنجليزي والإسباني."/>
     <meta name="twitter:image" content="https://koralive.football/assets/images/logo.png"/>
     <!-- ====================================================== -->
