--- a/buzkora.html
+++ b/buzkora.html
@@ -55,7 +55,8 @@
 
     <!-- هنا تضع روابط ملفات CSS و JavaScript كالمعتاد -->
     <link rel="stylesheet" href="assets/css/matches.css" media="print" onload="this.media='all'">
-    
+
+    <link rel="preload" href="assets/css/newsk.css" as="style">
     <link rel="preload" href="assets/css/matches.css" as="style">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <link rel="stylesheet" href="assets/css/footer.css" media="print" onload="this.media='all'">
@@ -223,6 +224,7 @@
     </script>
     <script src="assets/js/ad-manager.js"></script>
     <script type="module" src="assets/js/matches.js"></script>
+    <script type="module" src="assets/js/news.js"></script>
 
 </body>   
 </html>
