--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
     </script>
     <script src="assets/js/ad-manager.js"></script>
     <script type="module" src="assets/js/matches.js"></script>
+    <script type="module" src="assets/js/news.js"></script>
 
 </body>   
 </html>
