--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <a href="#" class="logo-text">Kora Live</a>
+                <a href="index.html" class="logo-text">كوره لايف</a>
             </div>
                
         <div class="footer-links">
