--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <main class="matches-main">
     <section class="featured-section">
         <div class="section-header">
-            <h2 class="section-title"><i class="fas fa-moon"></i>مباريات اليوم بث مباشر</h2>
+            <h2 class="section-title"><i class="fas fa-moon"></i>كوره لايف — koralive.football | بث مباشر مباريات اليوم</h2>
         </div>
         <div id="featured-matches" class="featured-slider">
             <div class="loading-placeholder">
