--- a/404.html
+++ b/404.html
@@ -112,7 +112,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <a href="#" class="logo-text">FootTV</a>
+                <a href="#" class="logo-text">كورة لايف</a>
             </div>
             <div class="footer-links">
                 <a href="/"><i class="fas fa-home"></i> Matches</a>
