--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- ====================================================== -->
 
     <!-- 1. العنوان: قصير، واضح، ويحتوي على الكلمات المفتاحية الرئيسية -->
-    <title>كورة لايف | koora live | بث مباشر متابعة اهم مباريات اليوم koralive</title>
+    <title>كورة لايف - koora live - مباريات اليوم بث مباشر kora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
     <meta name="description" content="كورة لايف | koora live منصة رياضية متكاملة لمتابعة مباريات اليوم بث مباشر kora live ، مع تغطية فورية للأحداث، نتائج لحظية، وجداول مواعيد أبرز البطولات العربية والعالمية مع تفاصيل القنوات الناقلة.">
@@ -28,7 +28,7 @@
     <!-- === وسوم Open Graph (للمشاركة على فيسبوك وواتساب) === -->
     <!-- ====================================================== -->
 
-    <meta name="twitter:title" content="كورة لايف | koora live | بث مباشر متابعة اهم مباريات اليوم koralive">
+    <meta name="twitter:title" content="كورة لايفكورة لايف - koora live - مباريات اليوم بث مباشر kora live">
     <meta name="twitter:description" content="كورة لايف | koora live منصة رياضية متكاملة لمتابعة مباريات اليوم بث مباشر kora live ، مع تغطية فورية للأحداث، نتائج لحظية، وجداول مواعيد أبرز البطولات العربية والعالمية مع تفاصيل القنوات الناقلة.">
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://koralive.football/"/>
@@ -40,7 +40,7 @@
     <!-- ====================================================== -->
     
     <meta name="twitter:card" content="summary_large_image"/>
-    <meta name="twitter:title" content=كورة لايف | koora live | بث مباشر متابعة اهم مباريات اليوم koralive">/>
+    <meta name="twitter:title" content="كورة لايف - koora live - مباريات اليوم بث مباشر kora live">/>
     <meta name="twitter:description" content="كورة لايف | koora live منصة رياضية متكاملة لمتابعة مباريات اليوم بث مباشر kora live ، مع تغطية فورية للأحداث، نتائج لحظية، وجداول مواعيد أبرز البطولات العربية والعالمية مع تفاصيل القنوات الناقلة."/>
     <meta name="twitter:image" content="https://koralive.football/assets/images/logo.png"/>
     <!-- ====================================================== -->
