--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- ====================================================== -->
 
     <!-- 1. العنوان: قصير، واضح، ويحتوي على الكلمات المفتاحية الرئيسية -->
-    <title>كورة لايف - koora live - مباريات اليوم بث مباشر kora live</title>
+    <title>كورة لايف - Koralive.Football - مباريات اليوم بث مباشر kora live</title>
 
     <!-- 2. الوصف: جملة جذابة تصف محتوى الموقع بدقة -->
     <meta name="description" content="كورة لايف | koora live منصة رياضية متكاملة لمتابعة مباريات اليوم بث مباشر kora live ، مع تغطية فورية للأحداث، نتائج لحظية، وجداول مواعيد أبرز البطولات العربية والعالمية مع تفاصيل القنوات الناقلة.">
@@ -28,7 +28,7 @@
     <!-- === وسوم Open Graph (للمشاركة على فيسبوك وواتساب) === -->
     <!-- ====================================================== -->
 
-    <meta name="twitter:title" content="كورة لايفكورة لايف - koora live - مباريات اليوم بث مباشر kora live">
+    <meta name="twitter:title" content="كورة لايف -Koralive.Football - koora live - مباريات اليوم بث مباشر kora live">
     <meta name="twitter:description" content="كورة لايف | koora live منصة رياضية متكاملة لمتابعة مباريات اليوم بث مباشر kora live ، مع تغطية فورية للأحداث، نتائج لحظية، وجداول مواعيد أبرز البطولات العربية والعالمية مع تفاصيل القنوات الناقلة.">
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://koralive.football/"/>
@@ -109,12 +109,12 @@
       <main class="matches-main">
     <section class="featured-section">
         <div class="section-header">
-            <h2 class="section-title"><i class="fas fa-moon"></i>بث مباشر مباريات اليوم — koralive.football | كوره لايف</h2>
+            <h2 class="section-title"><i class="fas fa-moon"></i>بث مباشر مباريات اليوم</h2>
         </div>
         <div id="featured-matches" class="featured-slider">
             <div class="loading-placeholder">
                 <i class="fas fa-spinner fa-spin"></i>
-                <p>جاري تحميل مباريات المساء...</p>
+                <p>جاري تحميل مباريات اليوم ...</p>
             </div>
         </div>
     </section>
