Add ads.txt script to index.html

--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     </script>
     <script src="assets/js/ad-manager.js"></script>
     <script type="module" src="assets/js/matches.js"></script>
+    <script type="module" src="assets/js/ads.txt"></script>
     <script type="module" src="assets/js/news.js"></script>
 <div id="wait-modal" class="modal-overlay" onclick="closeWaitModal()">
     <div class="modal-content" onclick="event.stopPropagation()">
