Insert ad placeholder and script in index.html
Added ad placeholder and script for ad display.

--- a/index.html
+++ b/index.html
@@ -202,6 +202,12 @@
                 <li><a href="/yalla-shoot-tv.html">يلا شوت تيفي – Yalla Shoot TV</a></li>
             </ul>
         </div>
+        <div id="ezoic-pub-ad-placeholder-101"></div>
+<script>
+    ezstandalone.cmd.push(function () {
+        ezstandalone.showAds(101);
+    });
+</script>
         <div class="footer-widget">
             <h3 class="widget-title">كورة لايف</h3>
             <ul class="widget-menu">
