Add Ezoic site verification meta tag

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- ====================================================== -->
     <!-- === بقية الوسوم التقنية === -->
     <!-- ====================================================== -->
-
+         <meta name="ezoic-site-verification" content="45zSAuwQACheMQtQ6bGh81bIrm2Rsk" />
     <meta name="author" content="KoraLive Team">
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
     <meta name="robots" content="index, follow">
