--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-logo">
-                <a href="index.html" class="logo-text">مباريات اليوم بث مباشر كورة لايف | kora live</a>
+                <a href="index.html" class="logo-text">كورة لايف</a>
             </div>
                
         <div class="footer-links">
